--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "prime-solo-project",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5001",
   "engines": {
     "node": "16.x"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
